# tima-mindif-processor

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Pipfile  README.md  clean.sh  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tima_mindif_processor.py  tima_mindif_processor_16.py
tests/: .gitignore  cli_test.py  tima_mindif_processor_test.py
tests/test_data/ERD_21_Test/: ERD_21_Test.timaproj.data  ERD_21_Test.timaproj.struct
tests/test_data/ERD_21_Test_MinDif/353a5a30-f3d4-421a-9c2a-09000823963f/: fields.xml  measurement.xml  phases.xml
tests/test_data/ERD_21_Test_MinDif/353a5a30-f3d4-421a-9c2a-09000823963f/fields/A08/: phases.tif
tests/test_data/ERD_21_Test_MinDif/353a5a30-f3d4-421a-9c2a-09000823963f/fields/A09/: phases.tif
tests/test_data/ERD_21_Test_MinDif/353a5a30-f3d4-421a-9c2a-09000823963f/fields/A10/: phases.tif
tests/test_data/ERD_21_Test_MinDif/353a5a30-f3d4-421a-9c2a-09000823963f/fields/A11/: phases.tif
tests/test_data/ERD_21_Test_MinDif/d6b974f1-819f-4e1c-9574-af02bcf58c01/: measurement.xml  phases.xml
tests/test_data/STA_Test/: STA_Test.timaproj.data  STA_Test.timaproj.struct
tests/test_data/STA_Test_MinDif/1ff0813f-1dd2-4596-8ad3-b6e3e88e2df2/: measurement.xml  phases.xml
tests/test_data/STA_Test_MinDif/5c4d2019-3c7b-4e19-abd6-93e6896de667/: measurement.xml  phases.xml
tests/test_data/STA_Test_MinDif/cf101107-2486-4c12-a62d-71b8b5ad81e2/: fields.xml  measurement.xml  phases.xml
tima/: __main__.py  tima_mindif_processor.py  tima_mindif_processor_16.py  utils.py
tima_mindif_processor/: __main__.py
(+1532 files in other folders)
